# x402-rs

./: .cargoignore  .dockerignore  .editorconfig  .env.example  .gitignore  BLACKLIST_FEATURE.md  BLACKLIST_FIX_SUMMARY.md  BLACKLIST_REFACTORING_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPLIANCE_INTEGRATION_COMPLETE.md  CUSTOMIZATIONS.md  Caddyfile  Cargo.toml  DEPLOYMENT.md  Dockerfile  EIP3009_TIMESTAMP_BEST_PRACTICES.md  INTEGRATION_STATUS.md  LANDING_PAGE.md  README.md  ROLLBACK_PLAN.md  TODO.md  blacklist-v1.2.1.json  check_recent_errors.py  check_task_logs.py  current-task-def.json  deploy-facilitator.sh  deployment-result.json  docker-compose.observability.yml  docker-compose.yml  fetch_logs.py  justfile  monitor_base_logs.py  new-task-def.json  timestamp.txt  tmpclaude-7ded-cwd
.cargo/: config.toml
.claude/: .irc-nick  irc-config.json  settings.local.json
.unused/: Dockerfile.original  from-testing.txt  notes.txt
abi/: AuthCaptureEscrow.json  DepositRelay.json  DepositRelayFactory.json  ICondition.json  PaymentOperator.json  ProtocolFeeConfig.json  RefundRequest.json  USDC.json  Validator6492.json  X402UptoPermit2Proxy.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
config/: README.md  blacklist.json.example  ofac_addresses.json  (+7 more)
crates/x402-compliance/: Cargo.toml  README.md
crates/x402-compliance/src/: audit_logger.rs  checker.rs  config.rs  error.rs  lib.rs
crates/x402-compliance/src/extractors/: evm.rs  mod.rs  solana.rs
crates/x402-compliance/src/lists/: blacklist.rs  mod.rs  ofac.rs
(+411 files in other folders)
